--- a/image-inspector.html
+++ b/image-inspector.html
@@ -34,7 +34,7 @@ Zoom, Rotate, Mirror, Download, and View image
       <lrnsys-button alt="Zoom in" icon="icons:zoom-in" on-tap="zoomIn" hover-class="blue  white-text"></lrnsys-button>
       <lrnsys-button alt="Zoom out" icon="icons:zoom-out" on-tap="zoomOut" hover-class="blue  white-text"></lrnsys-button>
       <lrnsys-button alt="Rotate right" icon="image:rotate-right" on-tap="rotateRight" hover-class="blue  white-text"></lrnsys-button>
-      <lrnsys-button rotateleft alt="Rotate left" icon="image:rotate-left" on-tap="rotateLeft" hover-class="blue  white-text"></lrnsys-button>
+      <lrnsys-button hidden$="{{rotateleft}}" alt="Rotate left" icon="image:rotate-left" on-tap="rotateLeft" hover-class="blue  white-text"></lrnsys-button>
       <lrnsys-button alt="Mirror image" icon="image:flip" on-tap="mirrorImage" hover-class="blue  white-text"></lrnsys-button>
       <lrnsys-button alt="Open in new window" icon="icons:launch" href="[[src]]" target="_blank" hover-class="blue  white-text"></lrnsys-button>
       <slot></slot>
@@ -59,11 +59,11 @@ Zoom, Rotate, Mirror, Download, and View image
         },
         // Image source
         src: {
-          type: String,
+          type: String
         },
         rotateleft: {
           type: Boolean,
-          notify: true,
+          value: false
         }
       },
       rotateRight: function () {
