--- a/image-inspector.html
+++ b/image-inspector.html
@@ -34,7 +34,7 @@ Zoom, Rotate, Mirror, Download, and View image
       <lrnsys-button alt="Zoom in" icon="icons:zoom-in" on-tap="zoomIn" hover-class="blue  white-text"></lrnsys-button>
       <lrnsys-button alt="Zoom out" icon="icons:zoom-out" on-tap="zoomOut" hover-class="blue  white-text"></lrnsys-button>
       <lrnsys-button alt="Rotate right" icon="image:rotate-right" on-tap="rotateRight" hover-class="blue  white-text"></lrnsys-button>
-      <lrnsys-button hidden$="{{rotateleft}}" alt="Rotate left" icon="image:rotate-left" on-tap="rotateLeft" hover-class="blue  white-text"></lrnsys-button>
+      <lrnsys-button alt="Rotate left" icon="image:rotate-left" on-tap="rotateLeft" hover-class="blue  white-text"></lrnsys-button>
       <lrnsys-button alt="Mirror image" icon="image:flip" on-tap="mirrorImage" hover-class="blue  white-text"></lrnsys-button>
       <lrnsys-button alt="Open in new window" icon="icons:launch" href="[[src]]" target="_blank" hover-class="blue  white-text"></lrnsys-button>
       <slot></slot>
@@ -61,10 +61,6 @@ Zoom, Rotate, Mirror, Download, and View image
         src: {
           type: String
         },
-        rotateleft: {
-          type: Boolean,
-          value: false
-        }
       },
       rotateRight: function () {
         var img = this.$$('#img');
